--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
     </div>
 </div> -->
 
-<div class="popUp ClosePopUp">
+<div class="popUp ClosePopUp" (click)="CLosePopUp($event)" id="popUp">
     <div class="popUpTab">
         <button class="popUpButtonLeft" (click)="Confirm()">Confirm</button>
         <button class="popUpButtonRight" (click)="togglePopUp()">Discard</button>
@@ -27,9 +27,17 @@
             <img class="transparentBG" src="../../assets/transparentBG.jpg" alt="">
             <div class="tempImage">
                 <img class="tmepImgInside" src="../../assets/test.jpg" alt="">
-                <div (cdkDragMoved)="dragMoved($event)" class="croppingBox" cdkDragBoundary=".tempImage" cdkDrag>
+                <div id='square' (cdkDragMoved)="dragMoved($event)" class="croppingBox" cdkDragBoundary=".tempImage"
+                    cdkDrag>
                 </div>
             </div>
+
+            <!-- <div class="tempImage">
+                <img class="tmepImgInside" src="../../assets/test.jpg" alt="">
+                <div (cdkDragMoved)="dragMoved($event)" class="croppingBox" cdkDragBoundary=".tempImage" cdkDrag>
+                </div>
+            </div> -->
+
         </div>
 
     </div>
@@ -50,8 +58,7 @@
         <div class="UpperPart">
             <div class="img">
                 <div class="svgContainer">
-                    <svg [ngClass]="{svgPersonToggle: uploadedImage}" xmlns="http://www.w3.org/2000/svg" fill="white"
-                        class="bi bi-person-fill" viewBox="0 0 16 16">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-person-fill" viewBox="0 0 16 16">
                         <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                     </svg>
 
