--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,6 +21,8 @@
     --theme12: #25be89;
     --dangerColor: #FE004D;
 
+    --theme2: #425061;
+
     --xLocation: 50%;
     --yLocation: 50%;
     --radius: 100%;
@@ -28,7 +30,7 @@
     --clippingX: 50%;
     --clippingY: 50%;
 
-    --SquareBorderRadius: 4px;
+    --SquareBorderRadius: 2px;
     /* --clippingRadius: 200px; */
 
 
@@ -317,7 +319,7 @@ h3[contenteditable]:hover {
     border-radius: 50%;
     width: var(--AvatarWidth);
     height: var(--AvatarWidth);
-    background-color: green;
+    /* background-color: green; */
     position: relative;
 }
 
@@ -514,17 +516,90 @@ h3[contenteditable]:hover {
 
     /* left: 200px; 
     top: 100px; */
-    clip-path: circle(var(--radius) at var(--xLocation) var(--yLocation));
+    /* clip-path: circle(var(--radius) at var(--xLocation) var(--yLocation));
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - calc(var(--xLocation) + var(--radius))) calc(100% - calc(var(--yLocation) + var(--radius))) calc(var(--xLocation) - var(--radius)) round 0%); */
+
     width: 400px;
     /* max-height: 300px; */
     /* height: 400px; */
     mask-image: radial-gradient(circle at var(--clippingX) var(--clippingY), black calc(var(--AvatarWidth)/2), rgba(0, 0, 0, 0.5) 0%);
     -webkit-mask-image: radial-gradient(circle at var(--clippingX) var(--clippingY), black calc(var(--AvatarWidth)/2), rgba(0, 0, 0, 0.5) 0%);
+
+
     display: flex;
     justify-content: center;
     align-items: center;
 
+
 }
+
+/* this selector will set the diff modes of the the selected images */
+.RestImg {
+    opacity: 1;
+    position: absolute;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s all;
+
+}
+
+/* this will set the avatar of square */
+.squareMode {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - calc(var(--xLocation) + var(--radius))) calc(100% - calc(var(--yLocation) + var(--radius))) calc(var(--xLocation) - var(--radius)));
+    /* border-radius: 10px; */
+    /* border-radius: 50%; */
+    /* border-radius: 75% 0% 25% 75% / 51% 25% 0% 49%; */
+
+
+
+
+}
+
+.circleMode {
+    clip-path: circle(var(--radius) at var(--xLocation) var(--yLocation));
+}
+
+.mode1LeftTop {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - var(--xLocation)) calc(100% - var(--yLocation)) calc(var(--xLocation) - var(--radius)));
+
+}
+
+.mode1RightTop {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - var(--xLocation) - var(--radius)) calc(100% - var(--yLocation)) var(--xLocation));
+
+}
+
+.mode1RightBottom {
+    clip-path: inset(var(--yLocation) calc(100% - var(--xLocation) - var(--radius)) calc(100% - var(--yLocation) - var(--radius)) var(--xLocation));
+
+}
+
+.mode1LeftBottom {
+    clip-path: inset(var(--yLocation) calc(100% - var(--xLocation)) calc(100% - var(--yLocation) - var(--radius)) calc(var(--xLocation) - var(--radius)));
+
+}
+
+.mode2Left {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - var(--xLocation)) calc(100% - var(--yLocation) - var(--radius)) calc(var(--xLocation) - var(--radius)));
+
+}
+
+.mode2Right {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - var(--xLocation) - var(--radius)) calc(100% - var(--yLocation) - var(--radius)) var(--xLocation));
+
+}
+
+.mode2Top {
+    clip-path: inset(calc(var(--yLocation) - var(--radius)) calc(100% - var(--xLocation) - var(--radius)) calc(100% - var(--yLocation)) calc(var(--xLocation) - var(--radius)));
+}
+
+.mode2Bottom {
+    clip-path: inset(var(--yLocation) calc(100% - var(--xLocation) - var(--radius)) calc(100% - var(--yLocation) - var(--radius)) calc(var(--xLocation) - var(--radius)));
+}
+
+
 
 .hidden {
     display: none;
@@ -567,12 +642,176 @@ h3[contenteditable]:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: var(--SquareBorderRadius) green solid;
+    border: var(--SquareBorderRadius) white solid;
     /* background-color: red;
     opacity: 0.2; */
     /* box-sizing: border-box; */
     cursor: all-scroll;
+
 }
+
+
+
+.black:hover :not(.tempImage) {
+    background-color: red;
+
+}
+
+.black {
+    background-color: black;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.longRod1Vertical {
+    background-color: white;
+    height: calc(100% +var(--SquareBorderRadius));
+    width: calc(var(--SquareBorderRadius) /2);
+    position: absolute;
+    left: calc(33.33% - var(--SquareBorderRadius));
+    top: calc(50% - calc(var(--AvatarWidth)/2) - var(--SquareBorderRadius));
+    opacity: 0.5;
+    /* background: repeating-linear-gradient(to bottom,
+            transparent 0 10px,
+            white 10px 20px); */
+}
+
+.longRod2Vertical {
+    background-color: white;
+    height: calc(100% +var(--SquareBorderRadius));
+    width: calc(var(--SquareBorderRadius) /2);
+    position: absolute;
+    left: calc(66.66% - var(--SquareBorderRadius));
+    top: calc(50% - calc(var(--AvatarWidth)/2) - var(--SquareBorderRadius));
+    opacity: 0.5;
+    /* background: repeating-linear-gradient(to bottom,
+            transparent 0 10px,
+            white 10px 20px); */
+}
+
+.longRod1Horizontal {
+    background-color: white;
+    width: calc(100% +var(--SquareBorderRadius));
+    height: calc(var(--SquareBorderRadius) /2);
+    position: absolute;
+    top: calc(33.33% - var(--SquareBorderRadius));
+    left: calc(50% - calc(var(--AvatarWidth)/2) - var(--SquareBorderRadius));
+    opacity: 0.5;
+    /* 
+    background: repeating-linear-gradient(to right,
+            transparent 0 10px,
+            white 10px 20px); */
+}
+
+.longRod2Horizontal {
+    background-color: white;
+    width: calc(100% +var(--SquareBorderRadius));
+    height: calc(var(--SquareBorderRadius) /2);
+    position: absolute;
+    top: calc(66.66% - var(--SquareBorderRadius));
+    left: calc(50% - calc(var(--AvatarWidth)/2) - var(--SquareBorderRadius));
+    opacity: 0.5;
+    /* background: repeating-linear-gradient(to right,
+            transparent 0 10px,
+            white 10px 20px); */
+}
+
+.sideLeft {
+    height: 26px;
+    width: 3px;
+    position: absolute;
+    background-color: white;
+    left: 2px;
+    top: calc(50% - var(--SquareBorderRadius));
+    transform: translate(0, -50%);
+}
+
+.sideRight {
+    height: 26px;
+    width: 3px;
+    position: absolute;
+    background-color: white;
+    right: 2px;
+    top: calc(50% - var(--SquareBorderRadius));
+    transform: translate(0, -50%);
+}
+
+
+.sideTop {
+    width: 26px;
+    height: 3px;
+    position: absolute;
+    background-color: white;
+    top: 2px;
+    left: calc(50% - var(--SquareBorderRadius));
+    transform: translate(-50%, 0);
+}
+
+.sideBottom {
+    width: 26px;
+    height: 3px;
+    position: absolute;
+    background-color: white;
+    bottom: 2px;
+    left: calc(50% - var(--SquareBorderRadius));
+    transform: translate(-50%, 0);
+}
+
+.leftTopCorner {
+    position: absolute;
+    background-color: transparent;
+    left: 2px;
+    top: 2px;
+    width: 20px;
+    height: 20px;
+    border-left: 6px solid white;
+    border-top: 6px solid white;
+
+}
+
+.rightTopCorner {
+    position: absolute;
+    background-color: transparent;
+    right: 2px;
+    top: 2px;
+    width: 20px;
+    height: 20px;
+    border-right: 6px solid white;
+    border-top: 6px solid white;
+
+}
+
+
+.rightBottomCorner {
+    position: absolute;
+    background-color: transparent;
+    right: 2px;
+    bottom: 2px;
+    width: 20px;
+    height: 20px;
+    border-right: 6px solid white;
+    border-bottom: 6px solid white;
+
+}
+
+.leftBottomCorner {
+    position: absolute;
+    background-color: transparent;
+    left: 2px;
+    bottom: 2px;
+    width: 20px;
+    height: 20px;
+    border-left: 6px solid white;
+    border-bottom: 6px solid white;
+
+}
+
+
+
+
 
 .button {
     position: absolute;
@@ -716,4 +955,8 @@ h3[contenteditable]:hover {
 
 .transform {
     transform: translate3d(0px, 0px, 0px) !important;
+}
+
+.hidden {
+    visibility: hidden;
 }
