--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,6 +31,15 @@
     --clippingY: 50%;
 
     --SquareBorderRadius: 2px;
+
+
+    --border-top-left-radius: 50%;
+    --border-top-right-radius: 50%;
+    --border-bottom-right-radius: 50%;
+    --border-bottom-left-radius: 50%;
+
+
+
     /* --clippingRadius: 200px; */
 
 
@@ -316,17 +325,56 @@ h3[contenteditable]:hover {
 .svgContainer {
     background-color: rgba(128, 128, 128, 0.319);
     /* padding: 8px; */
-    border-radius: 50%;
+    /* border-radius: 50%; */
+    border-top-right-radius: var(--border-top-right-radius);
+    border-top-left-radius: var(--border-top-left-radius);
+    border-bottom-right-radius: var(--border-bottom-right-radius);
+    border-bottom-left-radius: var(--border-bottom-left-radius);
+
     width: var(--AvatarWidth);
     height: var(--AvatarWidth);
     /* background-color: green; */
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    transition: 0.4s all;
+    /* overflow: hidden; */
+
+}
+
+/* .testClass {
+    border-top-right-radius: 0%;
+    border-top-left-radius: 0%;
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 0%;
+} */
+
+
+.avatar {
+    width: 800px;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mat-icon.avatar {
+    /* background-color: #2feaa8; */
+    width: 130%;
+    height: 130%;
+}
+
+.svg {
+    width: 100%;
 }
 
 .img:hover .HoverOn {
     height: 140px;
     left: -20%;
 }
+
+
 
 .img:hover .upload {
     visibility: visible;
